# madpinger

./: .gitignore  Cargo.toml  README.md  course_sections.csv  course_sections.txt  search_results.csv  some_manual_stuff.json
.github/workflows/: cargo_check.yml  checks.yml  ci.yml  lints.yml  release.yml  rust.yml  test.yml
src/: lib.rs  main.rs  search.rs  section.rs
tests/: section_get.rs
