[package]
name = "madpinger"
version = "0.1.0"
edition = "2021"
authors = ["calculub"]
description = "Program that pings the course search and enroll API"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.26", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }

[profile.release]
strip = true # automatically strip symbols from the binary
lto = true # "Link-time optimizations"

[profile.tiny]
inherits = "release"
opt-level = "z" # optimize for binary size
